--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@duffel/api": "^4.15.0",
+    "@tanstack/react-query": "^5.84.1",
+    "amadeus": "^11.0.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
