--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@duffel/api": "^4.15.0",
     "@tanstack/react-query": "^5.84.1",
     "amadeus": "^11.0.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
