baggage and services added and order create api added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@duffel/api": "^4.15.0",
+    "@duffel/components": "^3.11.0",
     "@tanstack/react-query": "^5.84.1",
     "amadeus": "^11.0.0",
     "date-fns": "^4.1.0",
